--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.4",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
