--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-cookie": "^4.1.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "8.5.0",
