--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.4",
