--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
-    "next": "12.0.7",
+    "next": "^10.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-cookie": "^4.1.1",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^0.2.4",
     "typescript": "^4.5.4"
   }
 }
