--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "framer-motion": "^6.2.8",
     "next": ">=12.0.9",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.4",
