--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.0.4",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-password-strength-bar": "^0.4.0",
     "react-phone-number-input": "^3.1.44",
     "react-redux": "^7.2.6",
