--- a/package.json
+++ b/package.json
@@ -8,28 +8,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
-    "axios": "^0.24.0",
+    "@reduxjs/toolkit": "^1.8.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.2",
+    "bootstrap-icons": "^1.8.1",
     "bootstrap-input-spinner": "^3.1.10",
     "framer-motion": "^6.2.8",
-    "next": ">=12.0.9",
-    "react": "17.0.2",
-    "react-bootstrap": "^2.0.4",
+    "fs": "^0.0.1-security",
+    "next": "^12.1.1",
+    "next.js": "^1.0.3",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-cookie": "^4.1.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.33.1",
     "react-password-strength-bar": "^0.4.0",
-    "react-phone-number-input": "^3.1.44",
+    "react-phone-number-input": "^3.1.48",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
-    "eslint": "8.5.0",
-    "eslint-config-next": "^0.2.4",
-    "typescript": "^4.5.4"
+    "eslint": "8.12.0",
+    "eslint-config-next": "^12.1.1",
+    "typescript": "^4.6.3"
   }
 }
