--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
@@ -31,6 +32,7 @@
     "swr": "^1.2.2"
   },
   "devDependencies": {
+    "cypress": "^9.5.3",
     "eslint": "8.12.0",
     "eslint-config-next": "^12.1.1",
     "typescript": "^4.6.3"
